# UniDL

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
docs/superpowers/specs/: 2026-07-07-aria2-startup-stderr-design.md
extension/: background-services.js  background-utils.js  background.js  manifest.json  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js
scripts/: package-desktop.mjs  package-extension.mjs  test-extension-background.mjs  verify-release.mjs
shared/: types.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  db.rs  download_file_monitor.rs  engine_adapters.rs  engine_install.rs  lib.rs  logger.rs  main.rs  models.rs  repositories.rs  services.rs  system_notification.rs  system_open.rs  system_sleep.rs  task_events.rs  torrent_metadata.rs  web_server.rs
src-tauri/src/engine_adapters/: aria2.rs  qbittorrent.rs  ytdlp.rs
src/components/: EngineSettingsView.tsx  NewTaskDialog.tsx  TaskDetailPanel.tsx
src/lib/: api.ts  error.ts  runtime.ts  tauri.ts  web-log.ts
