[package]
name = "unidl"
version = "0.1.0"
description = "A unified desktop download manager"
authors = ["UniDL contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "unidl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6"
